force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/TTS_Template_Fields_Setting__mdt.object-meta.xml
<CustomObject>
    <label>TTS Template Fields Setting</label>
    <pluralLabel>TTS Template Fields Settings</pluralLabel>
</CustomObject>