force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Already_mapped_or_new_changed_path__c.field-meta.xml
<CustomField>
    <fullName>Already_mapped_or_new_changed_path__c</fullName>
    <label>Already mapped or new/changed path?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>