force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Always_Display__c.field-meta.xml
<CustomField>
    <fullName>Always_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Display?</label>
    <type>Checkbox</type>
</CustomField>