force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Id__c</fullName>
    <label>Carrier Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>