force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/CO_types__c.field-meta.xml
<CustomField>
    <fullName>CO_types__c</fullName>
    <label>CO types</label>
    <length>100</length>
    <type>Text</type>
</CustomField>