force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Controlling_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field_API__c</fullName>
    <label>Controlling Field API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>