force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Required_if_Displayed_T_F__c.field-meta.xml
<CustomField>
    <fullName>Required_if_Displayed_T_F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required if Displayed? T/F</label>
    <type>Checkbox</type>
</CustomField>