force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <label>Section Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>