force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Source_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Source_Attribute__c</fullName>
    <label>Source Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>