force-app/main/default/objects/TTS_Template_Fields_Setting__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>